add better form

--- a/src/components/SimulationMap/SimulationMap.module.scss
+++ b/src/components/SimulationMap/SimulationMap.module.scss
@@ -1,6 +1,6 @@
 .container {
   // flex: 1;
-  width: 50vmax;
+  height: 50vmin;
   display: flex;
   align-items: center;
   justify-content: center;
